2006-09-18  Hans Rakers <hans at parse dot nl>
	* Fixed unbalanced ifdef in eaccelerator.h introduced in rev [269].
	  This fixes ticket #177

2006-09-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Reverse changeset 205 (doc-comment exclusion) from Tom Regner 
          <t.regner at librics.de>. 
        * only put the function that has the same name as the class as contructor 
          if there isn't a __construct function. This fixes ticket #172
        * Don't free memory with efree that has been allocated from the eA shm cache.
          This should fix A LOT of bugreports in Trac and on SF. It fixes #171 but 
          I think also some other bugs.

2006-08-29  Hans Rakers <hans at parse dot nl>

        * Skip disk cache creation and clean/clear actions when operating in
          shm_only mode. This fixes ticket #165

2006-08-23  Hans Rakers <hans at parse dot nl>

        * Fixes for tickets #157 and #164

2006-08-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix stupid bug (#159)
        * Handle returning null instead of array (#156)

2006-08-03  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * zend_do_inheritance can't be called with TSRMLS_CC when using 
          php 4, this also means that eAccelerator won't work with threading!
        * ea_info and ea_dasm: if eaccelerator_mm_instance is NULL, just return
          null and don't do something.

2006-07-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Don't use our own hash function, the one from the ZE is extremely much
          faster and provides a much better distribution.
        * Don't compile the user cache code one no feature is being compiled.
        * A big cleanup in struct naming
        * Move some functions around to make more of them static, this reduces
          the binary size and load times.
        * Remove some leftovers from restoring encoded scripts which only create
          overhead without the loader.